# paz

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  efficientdet_blocks.py  index.html  install_opencv.sh  pyproject.toml  setup.py  sitemap.xml
.github/: manifest.xml
.github/workflows/: publish-website.yml  python-package.yml  python-publish.yml  python-pypi-upload.yml
abstract/loader/: index.html
abstract/messages/: index.html
abstract/processor/: index.html
abstract/sequence/: index.html
backend/anchors/: index.html
backend/angles/: index.html
backend/boxes/: index.html
backend/camera/: index.html
backend/draw/: index.html
backend/groups/: index.html
backend/heatmaps/: index.html
backend/image/: index.html
backend/keypoints/: index.html
backend/quaternion/: index.html
backend/render/: index.html
backend/standard/: index.html
contributing/: index.html
datasets/: index.html
docs/: README.md  autogenerate_documentation.py  mkdocs.yml  structure.py
docs/templates/: index.md  installation.md
examples/: conftest.py  flat.py  legacy.py  test.py  train.py
examples/action_scores/: pipelines.py  train_classifier.py
installation/: index.html
paz/: __init__.py  applications.py  environment.py  environment_test.py  minimization.py  optimizers.py  pipelines.py  pipelines2.py  plot.py  progress_bar.py  progressbar.py  progressbar_test.py  pytree.py  pytree_test.py  utils.py  utils_test.py
search/: search_index.json
tests/: test_block.py  test_efficientdet.py  test_layers.py  test_ssd300.py  test_ssd512.py
(+1841 files in other folders)
