[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paz"
version = "0.3.0"
description = "Perception for Autonomous Systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Octavio Arriaga" }
]
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.8",
    "keras>=3",
    "jax",
    "tfp-nightly",
    "matplotlib",
    "optax"
]

[project.urls]
Homepage = "https://github.com/oarriaga/paz"
Repository = "https://github.com/oarriaga/paz"
Issues = "https://github.com/oarriaga/paz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["paz*"]
